--- a/payment_jetcheckout_system/wizards/item_import.xml
+++ b/payment_jetcheckout_system/wizards/item_import.xml
@@ -10,31 +10,41 @@
                     <p class="h4 my-3 text-700 text-center" colspan="2">Please upload a payment item list</p>
                     <field name="file" filename="filename" colspan="2" nolabel="1" class="justify-content-center my-3 px-5"/>
                     <field name="filename" invisible="1" colspan="2" nolabel="1"/>
+                    <p class="h5 mt-5 text-primary text-center" colspan="2">
+                        <a href="/payment_jetcheckout_system/static/src/xlsx/template_item_import.xlsx"><i class="fa fa-file-excel-o mr-2"/>Example Template</a></p>
                 </group>
                 <group>
                     <field name="line_ids" readonly="1" colspan="2" nolabel="1" force_save="1">
                         <tree create="0" edit="0" delete="0">
-                            <field name="acquirer_id" force_save="1"/>
-                            <field name="partner_id" force_save="1"/>
+                            <field name="partner_name" force_save="1"/>
+                            <field name="partner_vat" force_save="1"/>
+                            <field name="partner_email" force_save="1"/>
+                            <field name="date" force_save="1" optional="hide"/>
+                            <field name="due_date" force_save="1" optional="hide"/>
+                            <field name="ref" force_save="1"/>
+                            <field name="tag" force_save="1" optional="hide"/>
+                            <field name="description" force_save="1"/>
                             <field name="amount" force_save="1"/>
-                            <field name="state" force_save="1"/>
-                            <field name="state_message" force_save="1"/>
                             <field name="currency_id" invisible="1" force_save="1"/>
+                            <field name="partner_id" invisible="1" force_save="1"/>
                         </tree>
                         <form>
-                            <header>
-                                <field name="state" widget="statusbar" statusbar_visible="draft,pending,done"/>
-                            </header>
                             <sheet>
                                 <group>
                                     <group>
-                                        <field name="acquirer_id" force_save="1"/>
-                                        <field name="partner_id" force_save="1"/>
+                                        <field name="partner_name" force_save="1"/>
+                                        <field name="partner_vat" force_save="1"/>
+                                        <field name="partner_email" force_save="1"/>
                                         <field name="amount" force_save="1"/>
                                         <field name="currency_id" invisible="1" force_save="1"/>
+                                        <field name="partner_id" invisible="1" force_save="1"/>
                                     </group>
                                     <group>
-                                        <field name="state_message" force_save="1"/>
+                                        <field name="date" force_save="1"/>
+                                        <field name="due_date" force_save="1"/>
+                                        <field name="ref" force_save="1"/>
+                                        <field name="tag" force_save="1"/>
+                                        <field name="description" force_save="1"/>
                                     </group>
                                 </group>
                             </sheet>
@@ -57,5 +67,4 @@
     <field name="view_mode">form</field>
     <field name="target">new</field>
     </record>
-
 </odoo>
