--- a/payment_jetcheckout_system/views/partner.xml
+++ b/payment_jetcheckout_system/views/partner.xml
@@ -28,6 +28,7 @@
     <field name="inherit_id" ref="base.view_partner_category_form"/>
     <field name="arch" type="xml">
         <xpath expr="//group" position="inside">
+            <field name="code"/>
             <field name="company_id" groups="base.group_multi_company,base.group_system" options="{'no_create': True, 'no_open': True}"/>
         </xpath>
     </field>
