[FIX] verify page fixed

--- a/payment_jetcheckout/static/src/scss/payment.scss
+++ b/payment_jetcheckout/static/src/scss/payment.scss
@@ -103,11 +103,11 @@
     }
 
     nav.o_main_navbar {
-        display: none;
+        display: none !important;
     }
 
     nav.oe_main_menu_navbar {
-        display: none;
+        display: none !important;
     }
 
     .slider.round {
