--- a/payment_vendor/views/templates.xml
+++ b/payment_vendor/views/templates.xml
@@ -75,6 +75,8 @@
                                 </div>
                                 <div t-if="company.payment_page_item_add_ok" class="text-right">
                                     <button class="btn btn-sm btn-light text-primary" field="payment.itemAdd">Add new payment item</button>
+                                    <input type="hidden" t-att-value="company.payment_page_item_add_date_readonly" field="payment.itemAddDateReadonly"/>
+                                    <input type="hidden" t-att-value="company.payment_page_item_add_desc_maxlength" field="payment.itemAddDescMaxlength"/>
                                     <input type="hidden" t-att-value="company.payment_page_item_add_desc_prefix" field="payment.itemAddDescPrefix"/>
                                 </div>
                             </div>
