--- a/payment_jetcheckout/views/templates.xml
+++ b/payment_jetcheckout/views/templates.xml
@@ -718,6 +718,10 @@
             <input type="hidden" name="success_url" t-att-value="success_url" field="payment.successurl"/>
             <input type="hidden" name="fail_url" t-att-value="fail_url" field="payment.failurl"/>
             <input type="hidden" name="partner" t-att-value="partner.id" field="partner"/>
+            <span id="campaign" class="d-none" t-esc="campaign" field="campaign.text"/>
+            <div id="payment_type" class="d-none">
+                <input type="radio" name="payment_type" checked="checked" value="virtual_pos"/>
+            </div>
             <div id="payment_card" class="payment-card row justify-content-center mx-0 h-100">
                 <div class="col-md-6 row justify-content-center mx-0">
                     <div class="payment-table mt-2 p-3">
