--- a/payment_jetcheckout_system/wizards/item_import.xml
+++ b/payment_jetcheckout_system/wizards/item_import.xml
@@ -25,8 +25,12 @@
                             <field name="tag" force_save="1" optional="hide"/>
                             <field name="description" force_save="1"/>
                             <field name="amount" force_save="1"/>
+                            <field name="user_name" force_save="1" optional="hide"/>
+                            <field name="user_email" force_save="1" optional="hide"/>
+                            <field name="user_mobile" force_save="1" optional="hide"/>
                             <field name="currency_id" invisible="1" force_save="1"/>
                             <field name="partner_id" invisible="1" force_save="1"/>
+                            <field name="user_id" invisible="1" force_save="1"/>
                         </tree>
                         <form>
                             <sheet>
@@ -45,6 +49,10 @@
                                         <field name="ref" force_save="1"/>
                                         <field name="tag" force_save="1"/>
                                         <field name="description" force_save="1"/>
+                                        <field name="user_name" force_save="1"/>
+                                        <field name="user_email" force_save="1"/>
+                                        <field name="user_mobile" force_save="1"/>
+                                        <field name="user_id" invisible="1" force_save="1"/>
                                     </group>
                                 </group>
                             </sheet>
