[IMP] item import

--- a/payment_jetcheckout_system/wizards/item_import.xml
+++ b/payment_jetcheckout_system/wizards/item_import.xml
@@ -28,6 +28,8 @@
                             <field name="user_name" force_save="1" optional="hide"/>
                             <field name="user_email" force_save="1" optional="hide"/>
                             <field name="user_mobile" force_save="1" optional="hide"/>
+                            <field name="bank_iban" invisible="1" force_save="1"/>
+                            <field name="bank_merchant" invisible="1" force_save="1"/>
                             <field name="currency_id" invisible="1" force_save="1"/>
                             <field name="partner_id" invisible="1" force_save="1"/>
                             <field name="user_id" invisible="1" force_save="1"/>
@@ -40,6 +42,8 @@
                                         <field name="partner_vat" force_save="1"/>
                                         <field name="partner_email" force_save="1"/>
                                         <field name="amount" force_save="1"/>
+                                        <field name="bank_iban" invisible="1" force_save="1"/>
+                                        <field name="bank_merchant" invisible="1" force_save="1"/>
                                         <field name="currency_id" invisible="1" force_save="1"/>
                                         <field name="partner_id" invisible="1" force_save="1"/>
                                     </group>
