--- a/payment_jetcheckout/views/transaction.xml
+++ b/payment_jetcheckout/views/transaction.xml
@@ -65,11 +65,11 @@
             <group name="transaction_jetcheckout" attrs="{'invisible': [('is_paylox', '=', False)]}">
                 <group>
                     <field name="jetcheckout_payment_amount" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
-                    <label for="jetcheckout_customer_rate" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
-                    <div class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}">
+                    <label for="jetcheckout_customer_rate" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission"/>
+                    <div class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission">
                         <field name="jetcheckout_customer_rate" class="pr-1"/>%
                     </div>
-                    <field name="jetcheckout_customer_amount" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
+                    <field name="jetcheckout_customer_amount" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission"/>
                     <field name="jetcheckout_payment_paid" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
                     <label for="jetcheckout_commission_rate" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission"/>
                     <div class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission">
@@ -77,9 +77,9 @@
                     </div>
                     <field name="jetcheckout_commission_amount" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission"/>
                     <field name="jetcheckout_payment_net" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
-                    <field name="jetcheckout_fund_amount" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
-                    <label for="jetcheckout_fund_rate" attrs="{'invisible': [('source_transaction_id', '!=', False)]}"/>
-                    <div class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}">
+                    <field name="jetcheckout_fund_amount" class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission"/>
+                    <label for="jetcheckout_fund_rate" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission"/>
+                    <div class="mr-5 float-right" attrs="{'invisible': [('source_transaction_id', '!=', False)]}" groups="payment_jetcheckout.group_transaction_commission">
                         <field name="jetcheckout_fund_rate" class="pr-1"/>%
                     </div>
                 </group>
